--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,18 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
-    "jquery": "^3.1.1"
+    "angular-animate": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0",
+    "angular-material": "^1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "nodeProjectApp"
+  "moduleName": "nodeProjectApp",
+  "overrides": {}
 }
