--- a/package.json
+++ b/package.json
@@ -31,5 +31,14 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "angular": "^1.6.1",
+    "angular-material": "^1.1.3",
+    "async": "^2.1.4",
+    "eslint": "^3.15.0",
+    "express": "^4.14.1",
+    "lodash": "^4.17.4",
+    "mongodb": "^2.2.22"
   }
 }
