--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-material": "^1.1.3"
+    "angular-material": "^1.1.3",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
