--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-material": "^1.1.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "socket.io-client": "^1.7.2",
+    "moment": "^2.17.1",
+    "angular-moment": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
