--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^3.15.0",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
-    "mongodb": "^2.2.22"
+    "mongodb": "^2.2.22",
+    "socket.io": "^1.7.2"
   }
 }
