--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "lodash": "^4.17.4",
     "socket.io-client": "^1.7.2",
     "moment": "^2.17.1",
-    "angular-moment": "^1.0.1"
+    "angular-moment": "^1.0.1",
+    "angularjs-geolocation": "^0.1.1",
+    "ngmap": "^1.17.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
